# dartzmq

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .metadata  README.md  pubspec.yaml
example/android/: settings.gradle.kts
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dartzmq_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/wajahat/dartzmq_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/flutter/ephemeral/.plugin_symlinks/: dartzmq
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dartzmq.podspec
ios/Classes/: dartzmq.c
lib/: dartzmq.dart  dartzmq_bindings_generated.dart
lib/src/: bindings.dart  constants.dart  container.dart  exception.dart  monitor.dart  poller.dart  socket.dart  zeromq.dart
linux/: CMakeLists.txt
macos/: dartzmq.podspec
src/: CMakeLists.txt  dartzmq.c
test/: dartzmq_test.dart
windows/: CMakeLists.txt
